--- a/style.css
+++ b/style.css
@@ -347,6 +347,8 @@ p{
 .instagram-post{
 	padding: 50px;
 	padding-top: 0px;
+	align-content: center;
+	justify-content: center;
 }
 
 .instagram-post {
@@ -356,14 +358,26 @@ p{
 }
 
 .instagram-media {
-    max-height: 100%;
-    width: 100%;
-    height: 100%;
-    object-fit: cover; /* Scales the post nicely within the container */
+    width: 300px;
+    height: 300px;
+    min-width: 300px;
+    min-height: 300px;
+    overflow: auto; /* or use overflow: scroll; for visible scrollbars */
+    object-fit: cover;
+    border: 1px solid #ccc;
 }
+
 
 @media (max-width: 768px) {
     .instagram-post {
         height: 400px;
     }
 }
+
+iframe.instagram-media {
+    width: 300px !important;
+    height: 300px !important;
+    overflow: auto;
+    border: 1px solid #ccc;
+}
+
